cmake_minimum_required(VERSION 3.5)

project(lista2 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(lista2 main.cpp)
add_executable(zad1 zad1.cpp)
add_executable(zad2 zad2.cpp)
add_executable(zad3 zad3.cpp)
add_executable(zad4 zad4.cpp)
add_executable(zad5 zad5.cpp)
